--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,74 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-light {
+  --card-title-weight: 700;
+  --card-text-weight: 400;
+  --main-color: #000;
+  --bg-color: #fff;
+  --text-stroke-color: #fff;
+  --button-text-color: #fff;
+  --heart-contour-color: #000;
+  --sparks-color: #f00;
+  --heart-core-color: #000;
+  --heart-body-color: #000;
+  --heart-fill: #f00;
+  --background: repeating-linear-gradient( #d3d3d3 0px 2px, rgba(0, 0, 0, 0) 2px 4px),
+  repeating-linear-gradient(90deg, #e7e7e7 0px 2px, #1a1a1a 2px 4px),
+  linear-gradient(180deg, #E7E7E7 0%, #1A1A1A 100%);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --card-title-weight: 700;
+    --card-text-weight: 400;
+    --main-color: #000;
+    --bg-color: #fff;
+    --text-stroke-color: #fff;
+    --button-text-color: #fff;
+    --heart-contour-color: #000;
+    --sparks-color: #f00;
+    --heart-core-color: #000;
+    --heart-body-color: #000;
+    --heart-fill: #f00;
+    --background: repeating-linear-gradient( #d3d3d3 0px 2px, rgba(0, 0, 0, 0) 2px 4px),
+    repeating-linear-gradient(90deg, #e7e7e7 0px 2px, #1a1a1a 2px 4px),
+    linear-gradient(180deg, #E7E7E7 0%, #1A1A1A 100%);
+  }
+}
+
+:root.theme-dark {
+  --card-title-weight: 785;
+  --card-text-weight: 465;
+  --main-color: #00CC14;
+  --bg-color: #000;
+  --text-stroke-color: #000;
+  --button-text-color: #00cc14;
+  --heart-contour-color: #00cc14;
+  --sparks-color: #f00;
+  --heart-core-color: #00cc14;
+  --heart-body-color: #00cc14;
+  --heart-fill: #f00;
+  --background: repeating-linear-gradient( #000 0px 2px, rgba(0, 0, 0, 0) 2px 4px),
+  repeating-linear-gradient(90deg, #007f0c 0px 2px, #004306 2px 4px),
+  linear-gradient(180deg, #007f0c 0%, #004306 100%);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --card-title-weight: 785;
+    --card-text-weight: 465;
+    --main-color: #00CC14;
+    --bg-color: #000;
+    --text-stroke-color: #000;
+    --button-text-color: #00cc14;
+    --heart-contour-color: #00cc14;
+    --sparks-color: #f00;
+    --heart-core-color: #00cc14;
+    --heart-body-color: #00cc14;
+    --heart-fill: #f00;
+    --background: repeating-linear-gradient( #000 0px 2px, rgba(0, 0, 0, 0) 2px 4px),
+    repeating-linear-gradient(90deg, #007f0c 0px 2px, #004306 2px 4px),
+    linear-gradient(180deg, #007f0c 0%, #004306 100%);
+  }
+}
