--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@
   padding: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem) 0 25px 0;
   background-color: var(--bg-color);
   border: 2px solid var(--main-color);
-  font-family: var(--accent-font-family);
+  font-family: var(--accent-font-family), sans-serif;
   text-transform: uppercase;
 }
 
@@ -50,7 +50,7 @@
   flex-direction: column;
   gap: 5px;
   align-items: center;
-  margin-block: -5px 20px;
+  margin-block: 0px 20px;
 }
 
 .header-logo__title {
@@ -147,7 +147,7 @@
 .card {
   border: 2px solid var(--main-color);
   padding-bottom: 25px;
-  z-index: -5;
+
 }
 
 .card-image__container {
@@ -155,14 +155,14 @@
 }
 
 .card__image-text {
-  font-family: var(--accent-font-family);
+  font-family: var(--accent-font-family), sans-serif;
   position: absolute;
   font-size: 14px;
   line-height: 14px;
   inset-inline-end: 10px;
   inset-block-start: 20px;
   color: var(--main-color);
-  opacity: 0.6;
+  opacity: 0.5;
   text-shadow:
   1px 0 0 var(--bg-color),
   0 1px 0 var(--bg-color),
@@ -207,24 +207,6 @@
 }
 
 /*анимации like-icon находятся в animations.css*/
-
-.contour {
-  fill: var(--heart-contour-color);
-}
-
-.main-body {
-  fill: transparent;
-  transition: fill 0.3s linear;
-}
-  
-.core {
-  fill: transparent;
-  transition: fill 0.3s 0.03s linear;
-}
-
-.sparks {
-  opacity: 0;
-}
 
 .card-icon__button {
   background-color: transparent;
@@ -304,7 +286,7 @@
 .button__text {
   position: relative;
   z-index: 1;
-  font-family: var(--accent-font-family);
+  font-family: var(--accent-font-family), sans-serif;
   color: var(--button-text-color);
   font-size: 14px;
   line-height: 12.6px;
@@ -312,7 +294,7 @@
 }
 
 dialog::backdrop {
-  opacity: 0.65;
+  opacity: 0.75;
 }
 
 .dialog {
@@ -340,7 +322,7 @@ dialog::backdrop {
   justify-content: center;
   align-items: center;
   gap: 20px;
-  font-family: var(--accent-font-family);
+  font-family: var(--accent-font-family), sans-serif;
   font-size: 14px;
   line-height: 150%;
   text-transform: uppercase;
