--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -10,7 +10,7 @@
     font-family: Inter-Variable;
     src: 
     local('Inter-Variable')
-    url(../fonts/Inter-Variable.woff2) format('woff2 supports variation')
+    url(../fonts/Inter-Variable.woff2) format('woff2 supports variations')
     url(../fonts/Inter-Variable.woff2) format('woff2-variations');
     font-weight: 400 785;
     font-display: swap;
