--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -9,9 +9,9 @@
 @font-face {
     font-family: Inter-Variable;
     src: 
-    local('Inter-Variable')
-    url(../fonts/Inter-Variable.woff2) format('woff2 supports variations')
-    url(../fonts/Inter-Variable.woff2) format('woff2-variations');
+    local('Inter-Variable'),
+    url('../fonts/Inter-Variable.woff2') format('woff2 supports variations'),
+    url('../fonts/Inter-Variable.woff2') format('woff2-variations');
     font-weight: 400 785;
     font-display: swap;
 }
