--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 auto 100px;
+  margin: 0 auto 98px;
   padding: 110px 0 25px 0;
   background-color: var(--bg-color);
   border: 2px solid var(--main-color);
@@ -124,14 +124,10 @@
   inset-inline-start: -10px;
 }
 
-.main {
-  margin-block-start: 100px;
-}
-
 .main__card-list {
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  gap: 47px;
 }
 
 .main__card-list-item {
@@ -142,6 +138,7 @@
   padding: 4px 12px 6px;
   font-size: 18px;
   line-height: 21.78px;
+  font-variation-settings: 'wght' var(--card-title-weight)
 }
 
 .card {
@@ -192,18 +189,17 @@
 }
 
 .card__text {
-  padding: 25px 25px;
+  padding: 27px 25px 0 25px;
   font-size: 18px;
   line-height: 21px;
-  font-weight: var(--card-text-weight);
 }
 
 .cards__button {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  gap: 4px;
   padding-inline-end: 25px;
+  padding-block-start: 25px;
 }
 
 /*анимации like-icon находятся в animations.css*/
@@ -264,7 +260,7 @@
 .footer {
   display: grid;
   place-items: center;
-  margin-block-start: 52px;
+  margin-block-start: 50px;
 }
 
 .footer__button {
@@ -383,6 +379,10 @@ dialog::backdrop {
 
   .header-logo {
     gap: 20px;
+  }
+
+  .theme-menu__list {
+    margin-block-start: 5px;
   }
 
   .footer__button {
